--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,41 @@
-apply plugin: 'net.corda.plugins.cordapp'
-apply plugin: 'net.corda.plugins.quasar-utils'
+buildscript {
+    ext {
+        corda_release_group = 'net.corda'
+        corda_release_version = '4.10.4'
+        corda_gradle_plugins_version = '5.0.14'
+        kotlin_version = '1.4.0'
+        junit_version = '4.13.2'
+        mockk_version = '1.12.2'
+        quasar_version = '0.7.14_r3'
+        slf4j_version = '2.0.4'
+        log4j_version = '2.19.0'
+        minimum_corda_platform_version = '5'
+        target_corda_platform_version = '12'
+    }
 
+    repositories {
+        mavenLocal()
+        mavenCentral()
+        maven {
+            url 'https://download.corda.net/maven/corda-releases'
+        }
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
+        classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
+        //classpath "net.linguica.gradle:maven-settings-plugin:0.5"
+    }
+}
+
+apply plugin: 'kotlin'
+apply plugin: 'net.corda.plugins.cordapp'
+//apply plugin: 'net.corda.plugins.quasar-utils'
+
+allprojects {
+    apply from: "${rootProject.projectDir}/repositories.gradle"
+}
 dependencies {
     // Kotlin.
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
@@ -41,6 +76,7 @@ dependencies {
     testOutput sourceSets.test.output
 }
 
+/*
 publishing {
     publications {
         jar(MavenPublication) {
@@ -50,3 +86,4 @@ publishing {
         }
     }
 }
+ */
